Add endpoints to fetch schema/field directly
